NXP-23799: Add Options to PubSubProvider descriptor